[BUGFIX] fixing z-index value for fixed navigation

--- a/Resources/Public/Css/Desktop/style.css
+++ b/Resources/Public/Css/Desktop/style.css
@@ -8,7 +8,7 @@
 	#wrap.fixed { padding-top: 270px; }
 
 		nav { background: url(../../Images/Desktop/bg-body.jpg) repeat scroll transparent; border-bottom: 1px solid #5e2100; padding-bottom: 10px; }
-		.fixed nav { position: fixed; width: 100%; }
+		.fixed nav { position: fixed; width: 100%; z-index: 2; }
 
 			.logo { display: block; margin: 0 auto; }
 
@@ -26,6 +26,10 @@
 			clear: both;
 			margin: 0 auto;
 			width: 1036px;
+		}
+		.fixed #content-container {
+			position: relative;
+			z-index: 1;
 		}
 
 			#content {
